--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,31 +1,29 @@
 // utils-styles
-@import "./utils/vars";
-@import "./utils/visually-hidden";
-@import "./utils/mixins";
-@import "./utils/btn";
-@import "./utils/icon";
-
-// base-styles
-@import "./base/base";
-@import "./base/reset";
-
+@import './utils/vars';
+@import './utils/visually-hidden';
+@import './utils/mixins';
+@import './utils/btn';
+@import './utils/icon';
+// base-styles;
+@import './base/base';
+@import './base/reset';
 // components-styles
-@import "./components/container";
-@import "./components/header";
-@import "./components/hero";
-@import "./components/gallery";
-@import "./components/sunset";
-@import "./components/grear";
-@import "./components/monstera";
-@import "./components/clients";
-@import "./components/star";
-@import "./components/videography";
-@import "./components/footer__logo";
-@import "./components/footer__business";
-@import "./components/page";
-@import "./components/footer__content";
-@import "./components/footer-subscribe";
-@import "./components/footer-subscribe__form";
-@import "./components/footer-subscribe__content";
-@import "./components/footer-socials";
-@import "./components/footer";
+@import './components/container';
+@import './components/header';
+@import './components/hero';
+@import './components/gallery';
+@import './components/sunset';
+@import './components/grear';
+@import './components/monstera';
+@import './components/clients';
+@import './components/star';
+@import './components/videography';
+@import './components/footer__logo';
+@import './components/footer__business';
+@import './components/page';
+@import './components/footer__content';
+@import './components/footer-subscribe';
+@import './components/footer-subscribe__form';
+@import './components/footer-subscribe__content';
+@import './components/footer-socials';
+@import './components/footer';
