--- a/src/sass/components/_star.scss
+++ b/src/sass/components/_star.scss
@@ -3,15 +3,15 @@
 
   background-color: var(--background-color);
 
-  background-position: center;
-  background-size: cover;
+  //   background-position: center;
+  //   background-size: cover;
 
-  background-image: image-set(
-    url('../../images/star/star-1_@2x.webp') 2x,
-    url('../../images/star/star-1_@1x.webp') 1x,
-    url('../../images/star/star-1_@2x.jpg') 2x,
-    url('../../images/star/star-1_@1x.jpg') 1x
-  );
+  //   background-image: image-set(
+  //     url('../../images/star/star-1_@2x.webp') 2x,
+  //     url('../../images/star/star-1_@1x.webp') 1x,
+  //     url('../../images/star/star-1_@2x.jpg') 2x,
+  //     url('../../images/star/star-1_@1x.jpg') 1x
+  //   );
 
   &__content {
     padding-top: 205px;
